Fix preview screen clipping by constraining player container

--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@ body {
     position: relative;
 }
 
+#player-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
 #setup-screen {
     width: 100%;
     height: 100%;
